--- a/qdarkgraystyle/style.qss
+++ b/qdarkgraystyle/style.qss
@@ -24,11 +24,9 @@
  */
 QToolTip
 {
-     border: 1px solid black;
      background-color: #D1DBCB;
      padding: 1px;
      border-radius: 3px;
-     opacity: 100;
 }
 
 QWidget
@@ -744,7 +742,7 @@ QLabel
     border: 0px solid black;
     margin-left: 2px;
     margin-right: 2px;
-    ccolor: #D1DBCB;
+    color: #D1DBCB;
 }
 
 QTabWidget{
@@ -1075,7 +1073,7 @@ QToolButton:checked, QToolButton:pressed,
         QToolButton::menu-button:pressed {
     color: black;
     background-color: #D1DBCB;
-    border: 0px solid #D1DBCB;
+   border: 0px solid #D1DBCB;
     padding: 2px;
 }
 
